# helios-rl

./: .gitignore  CLAUDE.md  README.md  fix_cleanrl.py  prompt.md  pyproject.toml  requirements-rtx3090.txt  requirements-rtx50series.txt  run_eval.py
docs/: agent_multi_gpu_workflow.md
research_system/: README.md
scripts/: analyze_mppi_vs_pi.py  backup_control_plane.sh  benchmark_cartpole.py  compare_cleanrl.py  compare_hopper.py  eval_cartpole.py  eval_cartpole_seed.py  idea_queue.py  iter5_auto_watcher.sh  iter5_dashboard.sh  iter5_stream_remotes.sh  iter6_auto_queue.sh  launch_web_dashboard.sh  plot_blog_figs.py  plot_comparison.py  plot_dmc_suite.py  plot_phase1_progress.py  plot_tdmpc_glass_ci.py  profile_tdmpc_timing.py  render_glass_rollout.py  run_benchmark.py  run_cartpole.py  run_cartpole_early_stop.py  run_cartpole_fast_logged.py  run_cartpole_logged.py  run_dmc_tdmpc.py  run_fingerspin_fix.py  run_phase1c_remote.sh  run_phaseaa_codex_kupdate_sweep.sh  run_phaseab_codex_tdmpc2_5seed.sh  run_phased_local.sh  run_phasef_local.sh  run_phasei9_glass_probe.sh  run_phaset_local.sh  run_phasey_3060ti.sh  run_ppo_tune.py  run_sac_beat_official.sh  run_sac_custom.py  run_sac_mjx.py  run_sac_mjx_old.py  (+39 more)
tmp/: boxes_alive.json  boxes_progress.json  boxes_progress2.json  boxes_progress3.json  log_t2d6f6fd.json  log_t358669e.json  log_t381b0f1.json  log_t62cf3db.json  log_t967c993.json  log_t9c91581.json  log_taca602e.json  log_tec8adfb.json  log_tf62701c.json  queue_api.json  queue_api_after_pending.json  queue_api_after_push.json  queue_api_check.json  (+10 more)
(+455 files in other folders)
