[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "helios-rl"
version = "0.1.0"
description = "High-performance Extensible Latent Inference & Optimization System"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "helios-rl contributors" }
]
dependencies = [
    "jax[cuda12_pip]>=0.4.30",
    "flax>=0.8.0",
    "optax>=0.2.0",
    "gymnax>=0.0.6",
    "distrax>=0.1.5",
    "wandb>=0.16.0",
    "einops>=0.7.0",
    "hydra-core>=1.3.2"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
cpu = [
    "jax>=0.4.30",
]

[project.scripts]
helios = "helios.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/helios"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
